fixed background not loading

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<div class="columns">
 				<div class="column is-one-quarter"></div>
 					<div class="column">
-						<h1 class="title has-text-centered" style="color:#f2f2f2;">Onyx Radio</h1>
+						<h1 class="title has-text-centered" style="color:#f2f2f2;">Onyx Internet Radio</h1>
 						<audio id="stream" data-icon-type="text" data-able-player preload="auto">
 						  <source type="audio/ogg" src="http://petmemain.com:8000/stream"/>
 						  <source type="audio/mpeg" src="http://petmemain.com:8000/stream"/>
