Added stars and stuff.

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 	<link rel="stylesheet" href="build/ableplayer.min.css" type="text/css"/>
 	<link rel="stylesheet" href="styles/bulma.css" type="text/css"/>
 	<link rel="stylesheet" href="styles/player.css" type="text/css"/>
+	<link rel="stylesheet" href="styles/stars.css" type="text/css"/>
 	<script src="build/ableplayer.js"></script>
-</head>
-
 <body>
+<div id='stars'></div>
+<div id='stars2'></div>
+<div id='stars4'></div>
 <section class="hero is-fullheight is-medium frontpage ng-scope">
 		<div class="hero-body">
 			<div class="container">
