--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Onyx Internet Radio</title>
+	<title>RhythmHQ Internet Radio</title>
 	<script src="thirdparty/modernizr.custom.js"></script>
 	<script src="scripts/jquery-3.2.1.min.js"></script>
 	<script src="thirdparty/js.cookie.js"></script>
@@ -20,7 +20,7 @@
 				<div class="columns">
 				<div class="column is-one-quarter"></div>
 					<div class="column">
-						<h1 class="title has-text-centered" style="color:#f2f2f2;">Onyx Radio</h1>
+						<h1 class="title has-text-centered" style="color:#f2f2f2;">RhythmHQ Radio</h1>
 						<audio id="stream" data-icon-type="text" data-able-player preload="auto">
 						  <source type="audio/ogg" src="http://petmemain.com:8000/stream"/>
 						  <source type="audio/mpeg" src="http://petmemain.com:8000/stream"/>
