made a real about page, added submit and contact, added offline notif
and a lot of small fixes here and there.

--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 					<div class="logo"><img class="image is-centered" src="../images/logo_sm.png"></div>
 					<div class="tabs is-centered">
 						  <ul>
-						    <li><a href="http://rhythmhq.live/">- HOME</a></li>
 						    <li><a onclick="aboutPop()">ABOUT</a></li>
-						    <li><a onclick="donatePop()">DONATE -</a></li>
+						    <li><a onclick="submitPop()">SUBMIT MUSIC</a></li>
+						    <li><a onclick="contactPop()">CONTACT US</a></li>
+						    <li><a onclick="donatePop()">DONATE</a></li>
 						  </ul>
 						</div>
 					</div>
