--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 	<script src="scripts/sweetalert.min.js"></script>
 	<script src="scripts/pops.js"></script>
 	<script type="text/javascript">tuneIn()</script>
+	<script type="text/javascript">checkOffline()</script>
 <body onload="intervalTimer()">
 <div id='stars'></div>
 <div id='stars2'></div>
