changed contact us to contact on homepage

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						  <ul>
 						    <li><a onclick="aboutPop()">ABOUT</a></li>
 						    <li><a onclick="submitPop()">SUBMIT MUSIC</a></li>
-						    <li><a onclick="contactPop()">CONTACT US</a></li>
+						    <li><a onclick="contactPop()">CONTACT</a></li>
 						    <li><a onclick="donatePop()">DONATE</a></li>
 						  </ul>
 						</div>
