--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <div id='stars'></div>
 <div id='stars2'></div>
 <div id='stars4'></div>
-<section class="hero is-fullheight is-medium frontpage ng-scope">
+<section class="hero is-fullheight is-medium frontpage ng-scope is-flex-mobile">
 		<div class="hero-body">
 		<section class="section">
 			<div class="container">
