possible fix for my possible fix for my possible fix

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 <div id='stars'></div>
 <div id='stars2'></div>
 <div id='stars4'></div>
-<section class="hero is-fullheight is-medium frontpage ng-scope is-flex-mobile">
-		<div class="hero-body">
+<section class="hero is-fullheight is-medium">
+		<div class="hero-body is-inline-block-touch">
 		<section class="section">
 			<div class="container">
 					<div class="logo"><img class="image is-centered" src="../images/logo_sm.png"></div>
