added some things, fixed some stuff

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 						</audio>
 						<div class="container text-is-centered">
 						<div id="nowplaying"><p style="color:white;">Now Playing: <a id="queryLink" target="_blank"></a></p></div>
+						<!-- <div id="listeners"><p style="color:white;"><span></span> People Listening</p></div> -->
 						</div>
 		</section>
 		</div>
