updated to sweetalert2, fixed contact email domain, fixed a few things.

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 	<link rel="stylesheet" href="styles/bulma.css" type="text/css"/>
 	<link rel="stylesheet" href="styles/player.css" type="text/css"/>
 	<link rel="stylesheet" href="styles/stars.css" type="text/css"/>
+	<!-- <script src="scripts/sweetalert.min.js"></script> -->
 	<script src="build/ableplayer.js"></script>
-	<script src="scripts/sweetalert.min.js"></script>
+	<link rel="stylesheet" href="styles/sweetalert2.min.css"></script>
+	<script src="scripts/sweetalert2.min.js"></script>
 	<script src="scripts/pops.js"></script>
 <body>
 <div id='stars'></div>
@@ -42,7 +44,8 @@
 						</div>
 		</section>
 		</div>
+  </div>
 </section>
 </body>
-</html>
+</html
 
