--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
 						<div id="nowplaying"><p style="color:white;">Now Playing: <a id="queryLink" target="_blank"></a></p></div>
 						<!-- <div id="listeners"><p style="color:white;"><span></span> People Listening</p></div> -->
 						</div>
+					<div class="section-footer is-hidden-mobile">
+						<div class="footerlinks">
+							<a href="https://twitter.com/rhythmhqlive" target="_blank"><img src="../images/icon_twitter.png"></a>
+							<a href="https://discord.gg/2pS5TQH" target="_blank"><img src="../images/icon_discord.png"></a>
+						</div>
+					</div>
+		</div>
 		</section>
 		</div>
   </div>
