--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
 	<script src="scripts/sweetalert2.min.js"></script>
 	<script src="scripts/pops.js"></script>
 <body>
-<div id='stars'></div>
-<div id='stars2'></div>
-<div id='stars4'></div>
+<div class="stardestroyer">
+	<div id='stars'></div>
+	<div id='stars2'></div>
+	<div id='stars4'></div>
+</div>
 <section class="hero is-fullheight is-medium">
 		<div class="hero-body is-inline-block-touch">
 		<section class="section">
