--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>RhythmHQ Internet Radio</title>
 	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 	<script src="thirdparty/modernizr.custom.js"></script>
 	<script src="scripts/jquery-3.2.1.min.js"></script>
 	<script src="thirdparty/js.cookie.js"></script>
@@ -12,6 +12,14 @@
 	<link rel="stylesheet" href="styles/player.css" type="text/css"/>
 	<link rel="stylesheet" href="styles/stars.css" type="text/css"/>
 	<!-- <script src="scripts/sweetalert.min.js"></script> -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-103453342-2"></script>
+	<script>
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments)};
+	  gtag('js', new Date());
+
+	  gtag('config', 'UA-103453342-2');
+	</script>
 	<script src="build/ableplayer.js"></script>
 	<link rel="stylesheet" href="styles/sweetalert2.min.css"></script>
 	<script src="scripts/sweetalert2.min.js"></script>
