fixed analytics code

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 	<link rel="stylesheet" href="styles/player.css" type="text/css"/>
 	<link rel="stylesheet" href="styles/stars.css" type="text/css"/>
 	<!-- <script src="scripts/sweetalert.min.js"></script> -->
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-103453342-2"></script>
 	<script>
 	  window.dataLayer = window.dataLayer || [];
