--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>RhythmHQ Internet Radio</title>
+	<meta name="google-site-verification" content="v5ZSjOAnkjIg0-c3vgGAqk7AHdJh11XY6stheOjCW_g" />
 	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 	<script src="thirdparty/modernizr.custom.js"></script>
@@ -12,15 +13,6 @@
 	<link rel="stylesheet" href="styles/player.css" type="text/css"/>
 	<link rel="stylesheet" href="styles/stars.css" type="text/css"/>
 	<!-- <script src="scripts/sweetalert.min.js"></script> -->
-	<!-- Global Site Tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-103453342-2"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments)};
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-103453342-2');
-	</script>
 	<script src="build/ableplayer.js"></script>
 	<link rel="stylesheet" href="styles/sweetalert2.min.css"></script>
 	<script src="scripts/sweetalert2.min.js"></script>
