added metadata and favicons

--- a/index.html
+++ b/index.html
@@ -3,8 +3,31 @@
 <head>
 	<title>RhythmHQ Internet Radio</title>
 	<meta name="google-site-verification" content="v5ZSjOAnkjIg0-c3vgGAqk7AHdJh11XY6stheOjCW_g" />
-	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+	<meta name="description" content="We play the best underground music from around the world!">
+	<meta name="keywords" content="radio,underground,music,soundcloud,stream">
+	<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0" name="viewport">
+	<link rel="apple-touch-icon" sizes="180x180" href="/images/favicons/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="/images/favicons/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="/images/favicons/favicon-16x16.png">
+	<link rel="manifest" href="/images/favicons/manifest.json">
+	<link rel="mask-icon" href="/images/favicons/safari-pinned-tab.svg" color="#242424">
+	<link rel="shortcut icon" href="/images/favicons/favicon.ico">
+	<meta name="apple-mobile-web-app-title" content="RhythmHQ">
+	<meta name="application-name" content="RhythmHQ">
+	<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
+	<meta name="theme-color" content="#3373dc">
+	<meta property="og:url" content="http://rhythmhq.live">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="RhythmHQ: The best underground music from around the world.">
+	<meta property="og:description" content="We play the best underground music from around the world!">
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:site" content="@RhythmHQLive">
+	<meta name="twitter:creator" content="@RhythmHQLive">
+	<meta name="twitter:title" content="RhythmHQ: The best underground music from around the world.">
+	<meta name="twitter:description" content="We play the best underground music from around the world!">
+	<meta name="twitter:image" content="http://rhythmhq.live/images/favicons/android-chrome-512x512.png">
+	<!-- 	<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+	<link rel="shortcut icon" type="image/png" href="/favicon.png"/> -->
 	<script src="thirdparty/modernizr.custom.js"></script>
 	<script src="scripts/jquery-3.2.1.min.js"></script>
 	<script src="thirdparty/js.cookie.js"></script>
