fixed facebook metadata

--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
 	<meta name="application-name" content="RhythmHQ">
 	<meta name="msapplication-config" content="/images/favicons/browserconfig.xml">
 	<meta name="theme-color" content="#3373dc">
-	<meta property="og:url" content="http://rhythmhq.live">
-	<meta property="og:type" content="website">
-	<meta property="og:title" content="RhythmHQ: The best underground music from around the world.">
+	<meta property="og:image" content="/images/favicons/og-image.jpg">
+	<meta property="og:image:height" content="520">
+	<meta property="og:image:width" content="993">
+	<meta property="og:title" content="RhythmHQ: Underground internet radio!">
 	<meta property="og:description" content="We play the best underground music from around the world!">
+	<meta property="og:url" content="http://rhythmhq.live/">
 	<meta name="twitter:card" content="summary_large_image">
 	<meta name="twitter:site" content="@RhythmHQLive">
 	<meta name="twitter:creator" content="@RhythmHQLive">
