--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 	<div id='stars4'></div>
 </div>
 <section class="hero is-fullheight is-medium">
-		<div class="hero-body"> <!-- is-inline-block-touch -->
+		<div class="hero-body is-inline-block-touch"> 
 		<section class="section">
 			<div class="container">
 					<div class="logo"><img class="image is-centered" src="../images/logo_sm.png"></div>
