--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
 	<link rel="stylesheet" href="styles/sweetalert2.min.css"></script>
 	<script src="scripts/sweetalert2.min.js"></script>
 	<script src="scripts/pops.js"></script>
-<body>
+	<script src="scripts/jquery.jkey.min.js"></script>
+	<script>funStuff();</script>
+<body class="pressIOP">
 <div class="stardestroyer">
 	<div id='stars'></div>
 	<div id='stars2'></div>
