fixed header not ending

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 		ga('create', 'UA-103453342-2', 'auto');
 		ga('send', 'pageview');
 </script>
+</head>
 <body class="pressIOP">
 <div class="stardestroyer">
 	<div id='stars'></div>
