--- a/artists/index.html
+++ b/artists/index.html
@@ -6,6 +6,7 @@
 	<meta name="description" content="We play the best underground music from around the world!">
 	<meta name="keywords" content="radio,underground,music,soundcloud,stream">
 	<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0" name="viewport">
+	<meta charset="utf-8"/>
 	<link rel="apple-touch-icon" sizes="180x180" href="../images/favicons/apple-touch-icon.png">
 	<link rel="icon" type="image/png" sizes="32x32" href="../images/favicons/favicon-32x32.png">
 	<link rel="icon" type="image/png" sizes="16x16" href="../images/favicons/favicon-16x16.png">
