--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
 					<div class="tabs is-centered">
 						  <ul>
 						    <li><a onclick="aboutPop()">ABOUT</a></li>
+						    <li><a onclick="schedulePop()">SCHEDULE</a></li>
 						    <li class="is-hidden-mobile"><a onclick="submitPop()">SUBMIT MUSIC</a></li>
 						    <li class="is-hidden-mobile"><a onclick="contactPop()">CONTACT</a></li>
 						    <li><a onclick="donatePop()">DONATE</a></li>
