--- a/index.html
+++ b/index.html
@@ -76,11 +76,13 @@
 						</div>
 					</div>
 						<audio id="stream" data-icon-type="text" data-able-player preload="auto" autoplay>
-						  <source type="audio/ogg" src="http://petmemain.com:8000/stream"/>
-						  <source type="audio/mpeg" src="http://petmemain.com:8000/stream"/>
+						  <!-- <source type="audio/ogg" src="http://petmemain.com:8000/stream"/> -->
+						  <!-- <source type="audio/mpeg" src="http://petmemain.com:8000/stream"/> -->
+						  <source type="audio/mpeg" src="http://streaming.shoutcast.com/RhythmHQ"/>
 						</audio>
 						<div class="container text-is-centered">
-						<div id="nowplaying"><p style="color:white;">Now Playing: <a id="queryLink" target="_blank"></a></p></div>
+							<div id="nowplaying"><p style="color:white;">Now playing isn't working right now.<br /> It'll be fixed soon! -Kyotoshift</p></div>
+						<!-- <div id="nowplaying"><p style="color:white;">Now Playing: <a id="queryLink" target="_blank"></a></p></div> -->
 						<!-- <div id="listeners"><p style="color:white;"><span></span> People Listening</p></div> -->
 						</div>
 					<div class="section-footer is-hidden-mobile">
