--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 						  <source type="audio/mpeg" src="http://streaming.shoutcast.com/RhythmHQ"/>
 						</audio>
 						<div class="container text-is-centered">
-							<div id="nowplaying"><p style="color:white;">Now playing isn't working right now.<br /> It'll be fixed soon! -Kyotoshift</p></div>
+							<div id="nowplaying"></div>
 						<!-- <div id="nowplaying"><p style="color:white;">Now Playing: <a id="queryLink" target="_blank"></a></p></div> -->
 						<!-- <div id="listeners"><p style="color:white;"><span></span> People Listening</p></div> -->
 						</div>
